# wavekata-prototype

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  commitlint.config.js  package-lock.json  package.json  pull_request_checks.yml
.github/workflows/: build.yml  commitlint.yml  javascript-lint.yml  machete.yml  rust-lint.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-web/: eslint.config.js  package.json  vite.config.ts
