[package]
name = "wavekata"
description = "A Tauri App"
version.workspace = true
rust-version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wavekata_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[package.metadata.cargo-machete]
ignored = ["serde", "serde_json"]
